# compact-genome-rs

./: Cargo.toml  README.md
.github/workflows/: ci.yml
src/: interface.rs  io.rs  lib.rs
src/implementation/: alphabets.rs  array_kmer.rs  bit_array_kmer.rs  bit_vec_sequence.rs  bit_vec_sequence_store.rs  handle_sequence_store.rs  mod.rs  vec_sequence.rs  vec_sequence_store.rs
src/implementation/alphabets/: ascii_alphabet.rs  dna_alphabet.rs  dna_alphabet_or_n.rs  dna_iupac_nucleic_acid_alphabet.rs  famsa_amino_acid_alphabet.rs  generic_alphabet.rs  iupac_amino_acid_alphabet.rs  rna_alphabet.rs  rna_alphabet_or_n.rs  rna_iupac_nucleic_acid_alphabet.rs
src/interface/: alphabet.rs  k_mer.rs  sequence_store.rs
src/interface/alphabet/: dna_alphabet.rs  dna_alphabet_or_n.rs  mod.rs
src/interface/k_mer/: mod.rs
src/interface/sequence/: mod.rs  neighbor_iterators.rs
src/io/: error.rs  fasta.rs  mod.rs  peekable_reader.rs
src/io/fasta/: mod.rs
