[package]
name = "compact-genome"
description = "Representation of genomes"
categories = ["data-structures", "science"]
keywords = ["genome", "representation", "compact", "string", "bioinformatics"]
version = "6.0.1"
authors = ["Sebastian Schmidt <isibboi@gmail.com>"]
edition = "2021"
homepage = "https://github.com/sebschmi/compact-genome-rs"
documentation = "https://docs.rs/compact-genome"
repository = "https://github.com/sebschmi/compact-genome-rs"
readme = "README.md"
license = "BSD-2-Clause"
rust-version = "1.80.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
io = ["flate2", "enum-iterator"]
serde = ["dep:serde"]
rand = ["dep:rand"]

[dependencies]
traitsequence = "2.0.0"
itertools = "0.13.0"
bitvec = "1.0.1"
ref-cast = "1.0.23"
lazy_static = "1.5.0"
thiserror = "1.0.63"

# Used for feature "io"
flate2 = { version = "1.0.33", optional = true }
enum-iterator = { version = "2.1.0", optional = true }

# Used for feature "serde"
serde = { version = "1", features = ["derive"], optional = true }

# Used for feature "rand"
rand = { version = "0.8.5", optional = true }
