[package]
name = "compact-genome"
description = "Representation of genomes"
categories = ["data-structures", "science"]
keywords = ["genome", "representation", "compact", "string", "bioinformatics"]
version = "12.5.0"
authors = ["Sebastian Schmidt <isibboi@gmail.com>"]
edition = "2021"
homepage = "https://github.com/sebschmi/compact-genome-rs"
documentation = "https://docs.rs/compact-genome"
repository = "https://github.com/sebschmi/compact-genome-rs"
readme = "README.md"
license = "BSD-2-Clause"
rust-version = "1.81.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
io = ["flate2", "enum-iterator"]
serde = ["dep:serde"]
rand = ["dep:rand"]

[dependencies]
traitsequence = "8.1.2"
itertools = "0.14.0"
bitvec = "1.0.1"
ref-cast = "1.0.24"
lazy_static = "1.5.0"
thiserror = "2.0.12"

# Used for feature "io"
flate2 = { version = "1.1.0", optional = true }
enum-iterator = { version = "2.1.0", optional = true }

# Used for feature "serde"
serde = { version = "1.0.218", features = ["derive"], optional = true }

# Used for feature "rand"
rand = { version = "0.9.0", optional = true }
